parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> ADVP PUNCTUATION ADVP PUNCTUATION
Rule 2     S -> VP CP PUNCTUATION
Rule 3     S -> ADVP LPAREN INTERJECTIONS NP RPAREN PUNCTUATION
Rule 4     S -> ADVP LPAREN VP RPAREN PUNCTUATION
Rule 5     S -> ADVP PUNCTUATION
Rule 6     S -> VP LPAREN PP RPAREN PUNCTUATION
Rule 7     S -> CP LPAREN CP RPAREN PUNCTUATION
Rule 8     S -> VP VP ADJP LPAREN ADVP RPAREN PUNCTUATION
Rule 9     S -> ADVP VP PP LPAREN ADVP RPAREN PUNCTUATION
Rule 10    S -> VP NP PP PUNCTUATION
Rule 11    S -> VP ADVP ADJP PUNCTUATION
Rule 12    S -> VP LPAREN VP PP RPAREN PUNCTUATION
Rule 13    S -> VP PP ADJP PUNCTUATION
Rule 14    S -> CP VP NP PUNCTUATION
Rule 15    S -> VP VP PUNCTUATION
Rule 16    S -> ADVP PP PUNCTUATION
Rule 17    S -> ADVP LPAREN INTERJECTIONS RPAREN PUNCTUATION
Rule 18    S -> VP LPAREN VP RPAREN PUNCTUATION
Rule 19    S -> ADVP LPAREN INTERJECTIONS NOUNS RPAREN PUNCTUATION
Rule 20    S -> VP VP VP ADJP LPAREN ADVP RPAREN PUNCTUATION
Rule 21    S -> VP CP LPAREN CONJUNCTIONS VP RPAREN PUNCTUATION
Rule 22    S -> VP LPAREN VERBS VERBS PP RPAREN PUNCTUATION
Rule 23    S -> VP LPAREN PP RPAREN
Rule 24    ADVP -> ADVERBS NOUNS
Rule 25    ADVP -> ADVERBS VERBS
Rule 26    ADVP -> ADVERBS VERBS ADJP
Rule 27    ADVP -> ADVERBS VERBS ADVERBS
Rule 28    ADVP -> ADVERBS VERBS ADVERBS NOUNS
Rule 29    ADVP -> ADVERBS PP
Rule 30    ADVP -> ADVERBS VERBS DETERMINANT VERBS NOUNS
Rule 31    VP -> VERBS VERBS ADVERBS
Rule 32    VP -> VERBS ADVERBS
Rule 33    VP -> PRONOUNS VERBS PRONOUNS
Rule 34    VP -> PRONOUNS VERBS
Rule 35    VP -> PRONOUNS VERBS VERBS ADVERBS
Rule 36    VP -> VERBS PRONOUNS ADVERBS
Rule 37    VP -> VERBS ADVERBS VERBS
Rule 38    VP -> PRONOUNS VERBS VERBS ADVERBS NOUNS
Rule 39    VP -> VERBS ADJECTIVES NOUNS
Rule 40    VP -> ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
Rule 41    VP -> VERBS NOUNS PP
Rule 42    VP -> VERBS ADJECTIVES
Rule 43    VP -> VERBS PRONOUNS NOUNS ARTICLES VERBS
Rule 44    NP -> NOUNS PREPOSITIONS ADJECTIVES
Rule 45    NP -> PRONOUNS NOUNS
Rule 46    NP -> ARTICLES NOUNS
Rule 47    NP -> DETERMINANT NOUNS
Rule 48    PP -> PREPOSITIONS NP VP
Rule 49    PP -> PREPOSITIONS VERBS
Rule 50    PP -> PREPOSITIONS ADJP
Rule 51    PP -> PREPOSITIONS NP
Rule 52    PP -> PREPOSITIONS NOUNS
Rule 53    PP -> PREPOSITIONS PRONOUNS PRONOUNS NOUNS
Rule 54    PP -> PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
Rule 55    PP -> PREPOSITIONS ARTICLES NOUNS
Rule 56    PP -> PREPOSITIONS NP ARTICLES VERBS
Rule 57    CP -> CONJUNCTIONS VP
Rule 58    CP -> CONJUNCTIONS CONJUNCTIONS
Rule 59    ADJP -> DETERMINANT ADJECTIVES NOUNS
Rule 60    ADJP -> ARTICLES ADJECTIVES NOUNS
Rule 61    ADJP -> DETERMINANT ADJECTIVES
Rule 62    ADJP -> PRONOUNS ADJECTIVES NOUNS
Rule 63    ADJP -> NOUNS ADJECTIVES

Terminals, with rules where they appear

ADJECTIVES           : 39 42 44 59 60 61 62 63
ADVERBS              : 24 25 26 27 27 28 28 29 30 31 32 35 36 37 38 40
ARTICLES             : 40 43 46 54 55 56 60
CONJUNCTIONS         : 21 57 58 58
DETERMINANT          : 30 40 47 54 59 61
INTERJECTIONS        : 3 17 19
LPAREN               : 3 4 6 7 8 9 12 17 18 19 20 21 22 23
NOUNS                : 19 24 28 30 38 39 40 41 43 44 45 46 47 52 53 54 54 55 59 60 62 63
PREPOSITIONS         : 44 48 49 50 51 52 53 54 54 55 56
PRONOUNS             : 33 33 34 35 36 38 43 45 53 53 62
PUNCTUATION          : 1 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
RPAREN               : 3 4 6 7 8 9 12 17 18 19 20 21 22 23
VERBS                : 22 22 25 26 27 28 30 30 31 31 32 33 34 35 35 36 37 37 38 38 39 40 40 40 41 42 43 43 49 56
error                : 

Nonterminals, with rules where they appear

ADJP                 : 8 11 13 20 26 50
ADVP                 : 1 1 3 4 5 8 9 9 11 16 17 19 20
CP                   : 2 7 7 14 21
NP                   : 3 10 14 48 51 56
PP                   : 6 9 10 12 13 16 22 23 29 41
S                    : 0
VP                   : 2 4 6 8 8 9 10 11 12 12 13 14 15 15 18 18 20 20 20 21 21 22 23 48 57

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . ADVP PUNCTUATION ADVP PUNCTUATION
    (2) S -> . VP CP PUNCTUATION
    (3) S -> . ADVP LPAREN INTERJECTIONS NP RPAREN PUNCTUATION
    (4) S -> . ADVP LPAREN VP RPAREN PUNCTUATION
    (5) S -> . ADVP PUNCTUATION
    (6) S -> . VP LPAREN PP RPAREN PUNCTUATION
    (7) S -> . CP LPAREN CP RPAREN PUNCTUATION
    (8) S -> . VP VP ADJP LPAREN ADVP RPAREN PUNCTUATION
    (9) S -> . ADVP VP PP LPAREN ADVP RPAREN PUNCTUATION
    (10) S -> . VP NP PP PUNCTUATION
    (11) S -> . VP ADVP ADJP PUNCTUATION
    (12) S -> . VP LPAREN VP PP RPAREN PUNCTUATION
    (13) S -> . VP PP ADJP PUNCTUATION
    (14) S -> . CP VP NP PUNCTUATION
    (15) S -> . VP VP PUNCTUATION
    (16) S -> . ADVP PP PUNCTUATION
    (17) S -> . ADVP LPAREN INTERJECTIONS RPAREN PUNCTUATION
    (18) S -> . VP LPAREN VP RPAREN PUNCTUATION
    (19) S -> . ADVP LPAREN INTERJECTIONS NOUNS RPAREN PUNCTUATION
    (20) S -> . VP VP VP ADJP LPAREN ADVP RPAREN PUNCTUATION
    (21) S -> . VP CP LPAREN CONJUNCTIONS VP RPAREN PUNCTUATION
    (22) S -> . VP LPAREN VERBS VERBS PP RPAREN PUNCTUATION
    (23) S -> . VP LPAREN PP RPAREN
    (24) ADVP -> . ADVERBS NOUNS
    (25) ADVP -> . ADVERBS VERBS
    (26) ADVP -> . ADVERBS VERBS ADJP
    (27) ADVP -> . ADVERBS VERBS ADVERBS
    (28) ADVP -> . ADVERBS VERBS ADVERBS NOUNS
    (29) ADVP -> . ADVERBS PP
    (30) ADVP -> . ADVERBS VERBS DETERMINANT VERBS NOUNS
    (31) VP -> . VERBS VERBS ADVERBS
    (32) VP -> . VERBS ADVERBS
    (33) VP -> . PRONOUNS VERBS PRONOUNS
    (34) VP -> . PRONOUNS VERBS
    (35) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (36) VP -> . VERBS PRONOUNS ADVERBS
    (37) VP -> . VERBS ADVERBS VERBS
    (38) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (39) VP -> . VERBS ADJECTIVES NOUNS
    (40) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (41) VP -> . VERBS NOUNS PP
    (42) VP -> . VERBS ADJECTIVES
    (43) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS
    (57) CP -> . CONJUNCTIONS VP
    (58) CP -> . CONJUNCTIONS CONJUNCTIONS

    ADVERBS         shift and go to state 7
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9
    CONJUNCTIONS    shift and go to state 5

    S                              shift and go to state 1
    ADVP                           shift and go to state 2
    VP                             shift and go to state 3
    CP                             shift and go to state 4

state 1

    (0) S' -> S .



state 2

    (1) S -> ADVP . PUNCTUATION ADVP PUNCTUATION
    (3) S -> ADVP . LPAREN INTERJECTIONS NP RPAREN PUNCTUATION
    (4) S -> ADVP . LPAREN VP RPAREN PUNCTUATION
    (5) S -> ADVP . PUNCTUATION
    (9) S -> ADVP . VP PP LPAREN ADVP RPAREN PUNCTUATION
    (16) S -> ADVP . PP PUNCTUATION
    (17) S -> ADVP . LPAREN INTERJECTIONS RPAREN PUNCTUATION
    (19) S -> ADVP . LPAREN INTERJECTIONS NOUNS RPAREN PUNCTUATION
    (31) VP -> . VERBS VERBS ADVERBS
    (32) VP -> . VERBS ADVERBS
    (33) VP -> . PRONOUNS VERBS PRONOUNS
    (34) VP -> . PRONOUNS VERBS
    (35) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (36) VP -> . VERBS PRONOUNS ADVERBS
    (37) VP -> . VERBS ADVERBS VERBS
    (38) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (39) VP -> . VERBS ADJECTIVES NOUNS
    (40) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (41) VP -> . VERBS NOUNS PP
    (42) VP -> . VERBS ADJECTIVES
    (43) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS
    (48) PP -> . PREPOSITIONS NP VP
    (49) PP -> . PREPOSITIONS VERBS
    (50) PP -> . PREPOSITIONS ADJP
    (51) PP -> . PREPOSITIONS NP
    (52) PP -> . PREPOSITIONS NOUNS
    (53) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (55) PP -> . PREPOSITIONS ARTICLES NOUNS
    (56) PP -> . PREPOSITIONS NP ARTICLES VERBS

    PUNCTUATION     shift and go to state 10
    LPAREN          shift and go to state 11
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9
    PREPOSITIONS    shift and go to state 14

    VP                             shift and go to state 12
    PP                             shift and go to state 13

state 3

    (2) S -> VP . CP PUNCTUATION
    (6) S -> VP . LPAREN PP RPAREN PUNCTUATION
    (8) S -> VP . VP ADJP LPAREN ADVP RPAREN PUNCTUATION
    (10) S -> VP . NP PP PUNCTUATION
    (11) S -> VP . ADVP ADJP PUNCTUATION
    (12) S -> VP . LPAREN VP PP RPAREN PUNCTUATION
    (13) S -> VP . PP ADJP PUNCTUATION
    (15) S -> VP . VP PUNCTUATION
    (18) S -> VP . LPAREN VP RPAREN PUNCTUATION
    (20) S -> VP . VP VP ADJP LPAREN ADVP RPAREN PUNCTUATION
    (21) S -> VP . CP LPAREN CONJUNCTIONS VP RPAREN PUNCTUATION
    (22) S -> VP . LPAREN VERBS VERBS PP RPAREN PUNCTUATION
    (23) S -> VP . LPAREN PP RPAREN
    (57) CP -> . CONJUNCTIONS VP
    (58) CP -> . CONJUNCTIONS CONJUNCTIONS
    (31) VP -> . VERBS VERBS ADVERBS
    (32) VP -> . VERBS ADVERBS
    (33) VP -> . PRONOUNS VERBS PRONOUNS
    (34) VP -> . PRONOUNS VERBS
    (35) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (36) VP -> . VERBS PRONOUNS ADVERBS
    (37) VP -> . VERBS ADVERBS VERBS
    (38) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (39) VP -> . VERBS ADJECTIVES NOUNS
    (40) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (41) VP -> . VERBS NOUNS PP
    (42) VP -> . VERBS ADJECTIVES
    (43) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS
    (44) NP -> . NOUNS PREPOSITIONS ADJECTIVES
    (45) NP -> . PRONOUNS NOUNS
    (46) NP -> . ARTICLES NOUNS
    (47) NP -> . DETERMINANT NOUNS
    (24) ADVP -> . ADVERBS NOUNS
    (25) ADVP -> . ADVERBS VERBS
    (26) ADVP -> . ADVERBS VERBS ADJP
    (27) ADVP -> . ADVERBS VERBS ADVERBS
    (28) ADVP -> . ADVERBS VERBS ADVERBS NOUNS
    (29) ADVP -> . ADVERBS PP
    (30) ADVP -> . ADVERBS VERBS DETERMINANT VERBS NOUNS
    (48) PP -> . PREPOSITIONS NP VP
    (49) PP -> . PREPOSITIONS VERBS
    (50) PP -> . PREPOSITIONS ADJP
    (51) PP -> . PREPOSITIONS NP
    (52) PP -> . PREPOSITIONS NOUNS
    (53) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (55) PP -> . PREPOSITIONS ARTICLES NOUNS
    (56) PP -> . PREPOSITIONS NP ARTICLES VERBS

    LPAREN          shift and go to state 17
    CONJUNCTIONS    shift and go to state 5
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 21
    ARTICLES        shift and go to state 23
    NOUNS           shift and go to state 22
    DETERMINANT     shift and go to state 24
    ADVERBS         shift and go to state 7
    PREPOSITIONS    shift and go to state 14

    VP                             shift and go to state 15
    CP                             shift and go to state 16
    PP                             shift and go to state 18
    ADVP                           shift and go to state 19
    NP                             shift and go to state 20

state 4

    (7) S -> CP . LPAREN CP RPAREN PUNCTUATION
    (14) S -> CP . VP NP PUNCTUATION
    (31) VP -> . VERBS VERBS ADVERBS
    (32) VP -> . VERBS ADVERBS
    (33) VP -> . PRONOUNS VERBS PRONOUNS
    (34) VP -> . PRONOUNS VERBS
    (35) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (36) VP -> . VERBS PRONOUNS ADVERBS
    (37) VP -> . VERBS ADVERBS VERBS
    (38) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (39) VP -> . VERBS ADJECTIVES NOUNS
    (40) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (41) VP -> . VERBS NOUNS PP
    (42) VP -> . VERBS ADJECTIVES
    (43) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS

    LPAREN          shift and go to state 25
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9

    VP                             shift and go to state 26

state 5

    (57) CP -> CONJUNCTIONS . VP
    (58) CP -> CONJUNCTIONS . CONJUNCTIONS
    (31) VP -> . VERBS VERBS ADVERBS
    (32) VP -> . VERBS ADVERBS
    (33) VP -> . PRONOUNS VERBS PRONOUNS
    (34) VP -> . PRONOUNS VERBS
    (35) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (36) VP -> . VERBS PRONOUNS ADVERBS
    (37) VP -> . VERBS ADVERBS VERBS
    (38) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (39) VP -> . VERBS ADJECTIVES NOUNS
    (40) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (41) VP -> . VERBS NOUNS PP
    (42) VP -> . VERBS ADJECTIVES
    (43) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS

    CONJUNCTIONS    shift and go to state 27
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9

    VP                             shift and go to state 28

state 6

    (31) VP -> VERBS . VERBS ADVERBS
    (32) VP -> VERBS . ADVERBS
    (36) VP -> VERBS . PRONOUNS ADVERBS
    (37) VP -> VERBS . ADVERBS VERBS
    (39) VP -> VERBS . ADJECTIVES NOUNS
    (41) VP -> VERBS . NOUNS PP
    (42) VP -> VERBS . ADJECTIVES
    (43) VP -> VERBS . PRONOUNS NOUNS ARTICLES VERBS

    VERBS           shift and go to state 29
    ADVERBS         shift and go to state 30
    PRONOUNS        shift and go to state 31
    ADJECTIVES      shift and go to state 32
    NOUNS           shift and go to state 33


state 7

    (24) ADVP -> ADVERBS . NOUNS
    (25) ADVP -> ADVERBS . VERBS
    (26) ADVP -> ADVERBS . VERBS ADJP
    (27) ADVP -> ADVERBS . VERBS ADVERBS
    (28) ADVP -> ADVERBS . VERBS ADVERBS NOUNS
    (29) ADVP -> ADVERBS . PP
    (30) ADVP -> ADVERBS . VERBS DETERMINANT VERBS NOUNS
    (48) PP -> . PREPOSITIONS NP VP
    (49) PP -> . PREPOSITIONS VERBS
    (50) PP -> . PREPOSITIONS ADJP
    (51) PP -> . PREPOSITIONS NP
    (52) PP -> . PREPOSITIONS NOUNS
    (53) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (55) PP -> . PREPOSITIONS ARTICLES NOUNS
    (56) PP -> . PREPOSITIONS NP ARTICLES VERBS

    NOUNS           shift and go to state 34
    VERBS           shift and go to state 35
    PREPOSITIONS    shift and go to state 14

    PP                             shift and go to state 36

state 8

    (33) VP -> PRONOUNS . VERBS PRONOUNS
    (34) VP -> PRONOUNS . VERBS
    (35) VP -> PRONOUNS . VERBS VERBS ADVERBS
    (38) VP -> PRONOUNS . VERBS VERBS ADVERBS NOUNS

    VERBS           shift and go to state 37


state 9

    (40) VP -> ARTICLES . NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT

    NOUNS           shift and go to state 38


state 10

    (1) S -> ADVP PUNCTUATION . ADVP PUNCTUATION
    (5) S -> ADVP PUNCTUATION .
    (24) ADVP -> . ADVERBS NOUNS
    (25) ADVP -> . ADVERBS VERBS
    (26) ADVP -> . ADVERBS VERBS ADJP
    (27) ADVP -> . ADVERBS VERBS ADVERBS
    (28) ADVP -> . ADVERBS VERBS ADVERBS NOUNS
    (29) ADVP -> . ADVERBS PP
    (30) ADVP -> . ADVERBS VERBS DETERMINANT VERBS NOUNS

    $end            reduce using rule 5 (S -> ADVP PUNCTUATION .)
    ADVERBS         shift and go to state 7

    ADVP                           shift and go to state 39

state 11

    (3) S -> ADVP LPAREN . INTERJECTIONS NP RPAREN PUNCTUATION
    (4) S -> ADVP LPAREN . VP RPAREN PUNCTUATION
    (17) S -> ADVP LPAREN . INTERJECTIONS RPAREN PUNCTUATION
    (19) S -> ADVP LPAREN . INTERJECTIONS NOUNS RPAREN PUNCTUATION
    (31) VP -> . VERBS VERBS ADVERBS
    (32) VP -> . VERBS ADVERBS
    (33) VP -> . PRONOUNS VERBS PRONOUNS
    (34) VP -> . PRONOUNS VERBS
    (35) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (36) VP -> . VERBS PRONOUNS ADVERBS
    (37) VP -> . VERBS ADVERBS VERBS
    (38) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (39) VP -> . VERBS ADJECTIVES NOUNS
    (40) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (41) VP -> . VERBS NOUNS PP
    (42) VP -> . VERBS ADJECTIVES
    (43) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS

    INTERJECTIONS   shift and go to state 40
    VERBS           shift and go to state 6
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9

    VP                             shift and go to state 41

state 12

    (9) S -> ADVP VP . PP LPAREN ADVP RPAREN PUNCTUATION
    (48) PP -> . PREPOSITIONS NP VP
    (49) PP -> . PREPOSITIONS VERBS
    (50) PP -> . PREPOSITIONS ADJP
    (51) PP -> . PREPOSITIONS NP
    (52) PP -> . PREPOSITIONS NOUNS
    (53) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (55) PP -> . PREPOSITIONS ARTICLES NOUNS
    (56) PP -> . PREPOSITIONS NP ARTICLES VERBS

    PREPOSITIONS    shift and go to state 14

    PP                             shift and go to state 42

state 13

    (16) S -> ADVP PP . PUNCTUATION

    PUNCTUATION     shift and go to state 43


state 14

    (48) PP -> PREPOSITIONS . NP VP
    (49) PP -> PREPOSITIONS . VERBS
    (50) PP -> PREPOSITIONS . ADJP
    (51) PP -> PREPOSITIONS . NP
    (52) PP -> PREPOSITIONS . NOUNS
    (53) PP -> PREPOSITIONS . PRONOUNS PRONOUNS NOUNS
    (54) PP -> PREPOSITIONS . ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (55) PP -> PREPOSITIONS . ARTICLES NOUNS
    (56) PP -> PREPOSITIONS . NP ARTICLES VERBS
    (44) NP -> . NOUNS PREPOSITIONS ADJECTIVES
    (45) NP -> . PRONOUNS NOUNS
    (46) NP -> . ARTICLES NOUNS
    (47) NP -> . DETERMINANT NOUNS
    (59) ADJP -> . DETERMINANT ADJECTIVES NOUNS
    (60) ADJP -> . ARTICLES ADJECTIVES NOUNS
    (61) ADJP -> . DETERMINANT ADJECTIVES
    (62) ADJP -> . PRONOUNS ADJECTIVES NOUNS
    (63) ADJP -> . NOUNS ADJECTIVES

    VERBS           shift and go to state 45
    NOUNS           shift and go to state 47
    PRONOUNS        shift and go to state 48
    ARTICLES        shift and go to state 49
    DETERMINANT     shift and go to state 50

    NP                             shift and go to state 44
    ADJP                           shift and go to state 46

state 15

    (8) S -> VP VP . ADJP LPAREN ADVP RPAREN PUNCTUATION
    (15) S -> VP VP . PUNCTUATION
    (20) S -> VP VP . VP ADJP LPAREN ADVP RPAREN PUNCTUATION
    (59) ADJP -> . DETERMINANT ADJECTIVES NOUNS
    (60) ADJP -> . ARTICLES ADJECTIVES NOUNS
    (61) ADJP -> . DETERMINANT ADJECTIVES
    (62) ADJP -> . PRONOUNS ADJECTIVES NOUNS
    (63) ADJP -> . NOUNS ADJECTIVES
    (31) VP -> . VERBS VERBS ADVERBS
    (32) VP -> . VERBS ADVERBS
    (33) VP -> . PRONOUNS VERBS PRONOUNS
    (34) VP -> . PRONOUNS VERBS
    (35) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (36) VP -> . VERBS PRONOUNS ADVERBS
    (37) VP -> . VERBS ADVERBS VERBS
    (38) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (39) VP -> . VERBS ADJECTIVES NOUNS
    (40) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (41) VP -> . VERBS NOUNS PP
    (42) VP -> . VERBS ADJECTIVES
    (43) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS

    PUNCTUATION     shift and go to state 53
    DETERMINANT     shift and go to state 54
    ARTICLES        shift and go to state 56
    PRONOUNS        shift and go to state 57
    NOUNS           shift and go to state 55
    VERBS           shift and go to state 6

    VP                             shift and go to state 51
    ADJP                           shift and go to state 52

state 16

    (2) S -> VP CP . PUNCTUATION
    (21) S -> VP CP . LPAREN CONJUNCTIONS VP RPAREN PUNCTUATION

    PUNCTUATION     shift and go to state 58
    LPAREN          shift and go to state 59


state 17

    (6) S -> VP LPAREN . PP RPAREN PUNCTUATION
    (12) S -> VP LPAREN . VP PP RPAREN PUNCTUATION
    (18) S -> VP LPAREN . VP RPAREN PUNCTUATION
    (22) S -> VP LPAREN . VERBS VERBS PP RPAREN PUNCTUATION
    (23) S -> VP LPAREN . PP RPAREN
    (48) PP -> . PREPOSITIONS NP VP
    (49) PP -> . PREPOSITIONS VERBS
    (50) PP -> . PREPOSITIONS ADJP
    (51) PP -> . PREPOSITIONS NP
    (52) PP -> . PREPOSITIONS NOUNS
    (53) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (55) PP -> . PREPOSITIONS ARTICLES NOUNS
    (56) PP -> . PREPOSITIONS NP ARTICLES VERBS
    (31) VP -> . VERBS VERBS ADVERBS
    (32) VP -> . VERBS ADVERBS
    (33) VP -> . PRONOUNS VERBS PRONOUNS
    (34) VP -> . PRONOUNS VERBS
    (35) VP -> . PRONOUNS VERBS VERBS ADVERBS
    (36) VP -> . VERBS PRONOUNS ADVERBS
    (37) VP -> . VERBS ADVERBS VERBS
    (38) VP -> . PRONOUNS VERBS VERBS ADVERBS NOUNS
    (39) VP -> . VERBS ADJECTIVES NOUNS
    (40) VP -> . ARTICLES NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (41) VP -> . VERBS NOUNS PP
    (42) VP -> . VERBS ADJECTIVES
    (43) VP -> . VERBS PRONOUNS NOUNS ARTICLES VERBS

    VERBS           shift and go to state 62
    PREPOSITIONS    shift and go to state 14
    PRONOUNS        shift and go to state 8
    ARTICLES        shift and go to state 9

    VP                             shift and go to state 60
    PP                             shift and go to state 61

state 18

    (13) S -> VP PP . ADJP PUNCTUATION
    (59) ADJP -> . DETERMINANT ADJECTIVES NOUNS
    (60) ADJP -> . ARTICLES ADJECTIVES NOUNS
    (61) ADJP -> . DETERMINANT ADJECTIVES
    (62) ADJP -> . PRONOUNS ADJECTIVES NOUNS
    (63) ADJP -> . NOUNS ADJECTIVES

    DETERMINANT     shift and go to state 54
    ARTICLES        shift and go to state 64
    PRONOUNS        shift and go to state 65
    NOUNS           shift and go to state 55

    ADJP                           shift and go to state 63

state 19

    (11) S -> VP ADVP . ADJP PUNCTUATION
    (59) ADJP -> . DETERMINANT ADJECTIVES NOUNS
    (60) ADJP -> . ARTICLES ADJECTIVES NOUNS
    (61) ADJP -> . DETERMINANT ADJECTIVES
    (62) ADJP -> . PRONOUNS ADJECTIVES NOUNS
    (63) ADJP -> . NOUNS ADJECTIVES

    DETERMINANT     shift and go to state 54
    ARTICLES        shift and go to state 64
    PRONOUNS        shift and go to state 65
    NOUNS           shift and go to state 55

    ADJP                           shift and go to state 66

state 20

    (10) S -> VP NP . PP PUNCTUATION
    (48) PP -> . PREPOSITIONS NP VP
    (49) PP -> . PREPOSITIONS VERBS
    (50) PP -> . PREPOSITIONS ADJP
    (51) PP -> . PREPOSITIONS NP
    (52) PP -> . PREPOSITIONS NOUNS
    (53) PP -> . PREPOSITIONS PRONOUNS PRONOUNS NOUNS
    (54) PP -> . PREPOSITIONS ARTICLES NOUNS PREPOSITIONS NOUNS DETERMINANT
    (55) PP -> . PREPOSITIONS ARTICLES NOUNS
    (56) PP -> . PREPOSITIONS NP ARTICLES VERBS

    PREPOSITIONS    shift and go to state 14

    PP                             shift and go to state 67

state 21

    (33) VP -> PRONOUNS . VERBS PRONOUNS
    (34) VP -> PRONOUNS . VERBS
    (35) VP -> PRONOUNS . VERBS VERBS ADVERBS
    (38) VP -> PRONOUNS . VERBS VERBS ADVERBS NOUNS
    (45) NP -> PRONOUNS . NOUNS

    VERBS           shift and go to state 37
    NOUNS           shift and go to state 68


state 22

    (44) NP -> NOUNS . PREPOSITIONS ADJECTIVES

    PREPOSITIONS    shift and go to state 69


state 23

    (40) VP -> ARTICLES . NOUNS VERBS ADVERBS VERBS VERBS DETERMINANT
    (46) NP -> ARTICLES . NOUNS

    NOUNS           shift and go to state 70


state 24

    (47) NP -> DETERMINANT . NOUNS

    NOUNS           shift and go to state 71


state 25

    (7) S -> CP LPAREN . CP RPAREN PUNCTUATION
    (57) CP -> . CONJUNCTIONS VP
    (58) CP -> . CONJUNCTIONS CONJUNCTIONS

    CONJUNCTIONS    shift and go to state 5

    CP                             shift and go to state 72

state 26

    (14) S -> CP VP . NP PUNCTUATION
    (44) NP -> . NOUNS PREPOSITIONS ADJECTIVES
    (45) NP -> . PRONOUNS NOUNS
    (46) NP -> . ARTICLES NOUNS
    (47) NP -> . DETERMINANT NOUNS

    NOUNS           shift and go to state 22
    PRONOUNS        shift and go to state 74
    ARTICLES        shift and go to state 75
    DETERMINANT     shift and go to state 24

    NP                             shift and go to state 73

state 27

    (58) CP -> CONJUNCTIONS CONJUNCTIONS .

    LPAREN          reduce using rule 58 (CP -> CONJUNCTIONS CONJUNCTIONS .)
    VERBS           reduce using rule 58 (CP -> CONJUNCTIONS CONJUNCTIONS .)
    PRONOUNS        reduce using rule 58 (CP -> CONJUNCTIONS CONJUNCTIONS .)
    ARTICLES        reduce using rule 58 (CP -> CONJUNCTIONS CONJUNCTIONS .)
    PUNCTUATION     reduce using rule 58 (CP -> CONJUNCTIONS CONJUNCTIONS .)
    RPAREN          reduce using rule 58 (CP -> CONJUNCTIONS CONJUNCTIONS .)


state 28

    (57) CP -> CONJUNCTIONS VP .

    LPAREN          reduce using rule 57 (CP -> CONJUNCTIONS VP .)
    VERBS           reduce using rule 57 (CP -> CONJUNCTIONS VP .)
    PRONOUNS        reduce using rule 57 (CP -> CONJUNCTIONS VP .)
    ARTICLES        reduce using rule 57 (CP -> CONJUNCTIONS VP .)
    PUNCTUATION     reduce using rule 57 (CP -> CONJUNCTIONS VP .)
    RPAREN          reduce using rule 57 (CP -> CONJUNCTIONS VP .)


state 29

    (31) VP -> VERBS VERBS . ADVERBS

    ADVERBS         shift and go to state 76


state 30

    (32) VP -> VERBS ADVERBS .
    (37) VP -> VERBS ADVERBS . VERBS

  ! shift/reduce conflict for VERBS resolved as shift
    LPAREN          reduce using rule 32 (VP -> VERBS ADVERBS .)
